--- a/drivercar/app/build.gradle
+++ b/drivercar/app/build.gradle
@@ -70,8 +70,10 @@ dependencies {
 
     // To use constraintlayout in compose
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -165,4 +167,6 @@ dependencies {
 
     //add databinding
     implementation "com.android.databinding:compiler:3.1.4"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.1.0'
 }
