--- a/bookingcar/app/src/main/AndroidManifest.xml
+++ b/bookingcar/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
     android:installLocation="auto"
     tools:replace="android:appComponentFactory">
+
     <meta-data
         android:name="com.inthecheesefactory.lab.glidepicasso.GlideConfiguration"
         android:value="GlideModule" />
@@ -13,27 +14,26 @@
         android:value="@integer/google_play_services_version" />
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="@string/map_api_key" />
-    <!-- grant application permissions -->
-    <!--    <meta-data-->
-    <!--        android:name="com.facebook.sdk.AutoLogAppEventsEnabled"-->
-    <!--        android:value="false" />-->
-    <!--    <meta-data-->
-    <!--        android:name="com.facebook.sdk.AutoInitEnabled"-->
-    <!--        android:value="false" />-->
-    <!--    <meta-data-->
-    <!--        android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"-->
-    <!--        android:value="false" />-->
-    <!--    <meta-data-->
-    <!--        android:name="com.facebook.sdk.ApplicationId"-->
-    <!--        android:value="@string/facebook_app_id" />-->
-    <!--    <meta-data-->
-    <!--        android:name="com.facebook.sdk.ApplicationId"-->
-    <!--        android:value="@string/facebook_app_id" />-->
-    <!--    <queries>-->
-    <!--        <package android:name="com.facebook.katana" />-->
-    <!--    </queries> &lt;!&ndash; cấp quyền truy câp ứng dụng &ndash;&gt;-->
-    <!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+        android:value="@string/map_api_key" /> <!-- grant application permissions -->
+    <!-- <meta-data -->
+    <!-- android:name="com.facebook.sdk.AutoLogAppEventsEnabled" -->
+    <!-- android:value="false" /> -->
+    <!-- <meta-data -->
+    <!-- android:name="com.facebook.sdk.AutoInitEnabled" -->
+    <!-- android:value="false" /> -->
+    <!-- <meta-data -->
+    <!-- android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled" -->
+    <!-- android:value="false" /> -->
+    <!-- <meta-data -->
+    <!-- android:name="com.facebook.sdk.ApplicationId" -->
+    <!-- android:value="@string/facebook_app_id" /> -->
+    <!-- <meta-data -->
+    <!-- android:name="com.facebook.sdk.ApplicationId" -->
+    <!-- android:value="@string/facebook_app_id" /> -->
+    <!-- <queries> -->
+    <!-- <package android:name="com.facebook.katana" /> -->
+    <!-- </queries> &lt;!&ndash; cấp quyền truy câp ứng dụng &ndash;&gt; -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -41,6 +41,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- giọng nói -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -49,6 +50,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookingCar"
         tools:replace="android:theme">
+        <activity
+            android:name=".activity.CusInfoDetailActivity"
+            android:exported="false" />
         <activity android:name=".activity.Customerlogin" />
         <activity android:name=".activity.MainMenu" />
         <activity android:name=".activity.CustomerRegistration" />
@@ -59,10 +63,11 @@
         <activity android:name=".bottomnavigation.CustomerPanel_BottomNavigation" />
         <activity
             android:name=".activity.MainActivity"
-            android:windowSoftInputMode="stateUnchanged"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
