--- a/drivercar/app/src/main/AndroidManifest.xml
+++ b/drivercar/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name=".activity.DriverInfomationActivity"
             android:exported="false" />
+        <activity android:name=".activity.ActivityAddInfoDriver" />
         <activity android:name=".activity.EditInfoDriver" />
         <activity android:name=".activity.DriverDetalsActivity" />
         <activity android:name=".activity.Driverlogin" />
