--- a/drivercar/app/build.gradle
+++ b/drivercar/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -169,4 +170,12 @@ dependencies {
     implementation "com.android.databinding:compiler:3.1.4"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:26.1.0'
+
+    // Mapbox dependencies
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.13.0'
+    implementation('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.13.0') {
+        transitive = true
+    }
 }
