--- a/drivercar/app/src/main/AndroidManifest.xml
+++ b/drivercar/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
     package="com.example.drivercar"
     android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
     android:installLocation="auto"
-    tools:replace="android:appComponentFactory">
+    tools:replace="android:appComponentFactory" >
     <!-- android:usesCleartextTraffic="true" -->
+    <meta-data android:name="com.mapbox.EnableEvents" android:value="false" />
     <meta-data
         android:name="com.inthecheesefactory.lab.glidepicasso.GlideConfiguration"
         android:value="GlideModule" />
@@ -33,6 +34,7 @@
     <!-- <queries> -->
     <!-- <package android:name="com.facebook.katana" /> -->
     <!-- </queries> &lt;!&ndash; cấp quyền truy câp ứng dụng &ndash;&gt; -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -49,7 +51,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Drivercar"
-        tools:replace="android:theme">
+        tools:replace="android:theme" >
+        <activity
+            android:name=".activity.GoogleMapActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.DriverPhoneActivity"
             android:exported="false" />
@@ -69,7 +74,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="stateUnchanged">
+            android:windowSoftInputMode="stateUnchanged" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
